# alliander-robotics

./: .cppcheck-suppressions  .dockerignore  .env  .gitignore  .pre-commit-config.yaml  build.py  build_all_images.sh  components.yml  compose.py  conftest.py  down.sh  doxyfile.lint  doxygen-lint.sh  entrypoint.sh  flake.nix  github.py  image_manager.py  predefined_configurations.py  pydoclint.sh  pyproject.toml  run_cppcheck.sh  start.py  up.sh  utils.py
alliander_core/: alliander_core.Dockerfile  cuda.yml  docker-compose.yml
alliander_diagnostics/: alliander_diagnostics.Dockerfile  docker-compose.yml
alliander_diagnostics/src/alliander_diagnostics/: CMakeLists.txt  package.xml
alliander_diagnostics/src/alliander_diagnostics/include/: base_diagnostics.hpp  diagnostics.hpp  diagnostics_node.hpp  gps_diagnostics.hpp
alliander_diagnostics/src/alliander_diagnostics/launch/: diagnostics.launch.py
alliander_diagnostics/src/alliander_diagnostics/src/: diagnostics.cpp  diagnostics_node.cpp  gps_diagnostics.cpp  main.cpp
alliander_diagnostics/src/alliander_diagnostics/src_py/: cmd_vel_logger.py
alliander_ewellix/: alliander_ewellix.Dockerfile
alliander_franka/: alliander_franka.Dockerfile  docker-compose.yml
alliander_gazebo/: alliander_gazebo.Dockerfile  docker-compose.yml
alliander_gps/: alliander_gps.Dockerfile  docker-compose.yml
alliander_husarion/: alliander_husarion.Dockerfile  docker-compose.yml
alliander_joystick/: alliander_joystick.Dockerfile
alliander_joystick/src/rcdt_joystick/: package.xml
alliander_joystick/src/rcdt_joystick/include/: joystick_manager.hpp
alliander_joystick/src/rcdt_joystick/launch/: joystick.launch.py
alliander_joystick/src/rcdt_joystick/src/: joystick_manager.cpp
alliander_meta/: alliander_meta.Dockerfile
alliander_moveit/: alliander_moveit.Dockerfile  docker-compose.yml
alliander_nav2/: alliander_nav2.Dockerfile  docker-compose.yml
alliander_nav2/src/alliander_nav2/: CMakeLists.txt  package.xml
alliander_nav2/src/alliander_nav2/config/nav2/: behavior_tree.xml  bt_navigator.yaml  ekf_global.yaml  global_costmap.yaml  local_costmap.yaml  planner_server.yaml
alliander_nav2/src/alliander_nav2/config/nav2/controllers/: mppi.yaml
alliander_nav2/src/alliander_nav2/launch/: nav2.launch.py
alliander_nav2/src/alliander_nav2/src/: diagnostics_health_check.cpp  gps_health_check.cpp
alliander_nav2/src/alliander_nav2/src_py/: nav2_manager.py
alliander_nav2/src/alliander_nav2/test/: test_gps_waypoint_follower.py
alliander_ouster/: alliander_ouster.Dockerfile  docker-compose.yml
alliander_realsense/: alliander_realsense.Dockerfile  docker-compose.yml
alliander_robotics/: compose.py  parser.py  predefined_configurations.py  utils.py
alliander_robotics/alliander_meta/src/alliander_meta/: CMakeLists.txt
alliander_seekthermal/: Cargo.toml  alliander_seekthermal.Dockerfile  docker-compose.yml
alliander_seekthermal/src/alliander_seekthermal/: CMakeLists.txt  Cargo.toml  package.xml  setup.cfg  setup.py
alliander_seekthermal/src/alliander_seekthermal/launch/: hardware.launch.py  seekthermal.launch.py
alliander_seekthermal/src/alliander_seekthermal/src/: camera.rs  lib.rs  main.rs  ros.rs
alliander_seekthermal/src/alliander_seekthermal/src_py/: alliander_seekthermal.py
alliander_seekthermal/src/alliander_seekthermal/src_py/alliander_seekthermal/: alliander_seekthermal.py  mac_finder.py
alliander_tests/: alliander_tests.Dockerfile  docker-compose.yml
alliander_ur/: alliander_ur.Dockerfile  docker-compose.yml
alliander_velodyne/: alliander_velodyne.Dockerfile  docker-compose.yml
alliander_visualization/: alliander_visualization.Dockerfile  docker-compose.yml
alliander_xsens/: alliander_xsens.Dockerfile  docker-compose.yml
alliander_xsens/src/alliander_xsens/: CMakeLists.txt
alliander_xsens/src/alliander_xsens/config/: xsens_mti_node.yaml
alliander_xsens/src/alliander_xsens/include/: imu_bridge.hpp
alliander_xsens/src/alliander_xsens/launch/: xsens.launch.py
alliander_xsens/src/alliander_xsens/scripts/: estimate_magnetometer_bias.py
alliander_xsens/src/alliander_xsens/src/: imu_bridge.cpp
alliander_zed/: alliander_zed.Dockerfile  docker-compose.yml
common/: build.sh  colcon_build.sh  get_vendor_descriptions.sh
configurations/: platforms.py  predefined_configurations.py
docs/: CONTRIBUTING.md  PROJECT_GOVERNANCE.md  README.md  SUPPORT.md  conf.py  index.rst
rcdt_core/: build.sh  cuda.yml  docker-compose.yml  rcdt_core.Dockerfile
rcdt_franka/: docker-compose.yml  rcdt_franka.Dockerfile
rcdt_gazebo/: docker-compose.yml  rcdt_gazebo.Dockerfile
rcdt_gps/: build.sh  docker-compose.yml  rcdt_gps.Dockerfile
rcdt_husarion/: docker-compose.yml  rcdt_husarion.Dockerfile
rcdt_joystick/: docker-compose.yml  rcdt_joystick.Dockerfile
rcdt_joystick/src/rcdt_joystick/: CMakeLists.txt  package.xml
rcdt_joystick/src/rcdt_joystick/include/: joystick_manager.hpp
rcdt_joystick/src/rcdt_joystick/include/rcdt_joystick/: joystick_manager.hpp
rcdt_joystick/src/rcdt_joystick/launch/: joystick.launch.py
rcdt_joystick/src/rcdt_joystick/src/: joystick_manager.cpp  main.cpp
rcdt_moveit/: docker-compose.yml  rcdt_moveit.Dockerfile
rcdt_nav2/: docker-compose.yml  rcdt_nav2.Dockerfile
rcdt_nmea/: build.sh  docker-compose.yml  rcdt_nmea.Dockerfile
rcdt_ouster/: docker-compose.yml  rcdt_ouster.Dockerfile
rcdt_realsense/: build.sh  docker-compose.yml  rcdt_realsense.Dockerfile
rcdt_tests/: build.sh  docker-compose.yml  rcdt_tests.Dockerfile
rcdt_tools/: docker-compose.yml  rcdt_tools.Dockerfile
rcdt_velodyne/: docker-compose.yml  rcdt_velodyne.Dockerfile
rcdt_visualization/: build.sh  docker-compose.yml  rcdt_visualization.Dockerfile
rcdt_visualization/src/rcdt_visualization/: CMakeLists.txt  package.xml
rcdt_visualization/src/rcdt_visualization/launch/: rviz.launch.py  visualization.launch.py
rcdt_visualization/src/rcdt_visualization/rcdt_visualization/: rviz.py  tool_manager.py  vizanti.py
rcdt_visualization/src/rcdt_visualization/src_py/: rcdt_gui.py
(+388 files in other folders)
