# SPDX-FileCopyrightText: Alliander N. V.
#
# SPDX-License-Identifier: Apache-2.0

[project]
name = "alliander_robotics"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "mashumaro>=3.17",
    "pyyaml>=6.0.3",
    "termcolor>=3.3.0",
    "xacro>=2.1.1",
]

[dependency-groups]
documentation = [
    "myst-parser>=5.0.0",
    "sphinx>=9.1.0",
    "sphinx-autobuild>=2025.8.25",
    "sphinx-copybutton>=0.5.2",
    "sphinx-rtd-theme>=3.1.0",
    "sphinxcontrib-mermaid>=2.0.0",
    "sphinxcontrib-video>=0.4.2",
]
linting = [
    "flake8>=7.3.0",
    "flake8-pyproject>=1.2.4",
    "pre-commit>=4.5.1",
    "pydoclint>=0.8.3",
    "ruff>=0.14.13",
    "ty>=0.0.12",
]
alliander-franka = [
    "numpy>=2.4.1",
]
alliander-gazebo = [
    "numpy>=2.4.1",
    "pyproj>=3.7.2",
    "scipy>=1.17.0",
    "xmltodict>=1.0.2",
]
alliander-gps = [
    "pydantic>=2.12.5",
]
alliander-meta = [
    "numpy>=2.4.1",
    "pure-python-adb-reborn>=1.0.0",
    "scipy>=1.17.0"
]
alliander-moveit = [
    "xmltodict>=1.0.2",
]
alliander-nav2 = [
    "numpy>=2.4.1",
    "pydantic>=2.12.5",
]
alliander-seekthermal = [
    "numpy>=2.4.4",
    "requests>=2.33.0",
]
alliander-visualization = [
    "nicegui>=3.7.0",
    "numpy>=2.4.1",
    "simplejpeg>=1.9.0",
    "tornado>=6.5.4",
]
ros = [
    "catkin-pkg>=1.1.0",
    "lark>=1.3.1",
]
testing = [
    "pytest>=9.0.3",
    "pytest-timeout>=2.4.0",
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint]
select = ["I", "F", "E", "W", "B", "N", "A", "C4", "PL", "Q000", "SIM", "ANN", "ARG", "ERA", "D", "DOC"]
ignore = ["E501", "ANN204", "ANN401", "D100", "D104", "PLR0917", "PLR0914"]
preview = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
timeout = 60
timeout_func_only = true
timeout_method = "thread"
norecursedirs = ["install", "build", "log", ".venv", ".cache"]

# Settings of pydoclint, also in flake8 to use in vscode:
[tool.flake8]
style = "google"
skip-checking-short-docstrings = false
allow-init-docstring = true
check-style-mismatch = true
select = "DOC"

[tool.pydoclint]
style = "google"
skip-checking-short-docstrings = false
allow-init-docstring = true
check-style-mismatch = true
