[package]
name = "alliander_seekthermal"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.10"
log = "0.4.29"
r2r = "0.9.5"
r2r_msg_gen = "0.9.5"
reqwest = { version = "0.13.2", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
